--- a/goodmen-logistics/frontend/src/index.html
+++ b/goodmen-logistics/frontend/src/index.html
@@ -5,7 +5,7 @@
   <title>Goodmen Logistics - FMCSA Compliance & Operations</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="assets/goodmen-logo-simple.svg">
   
   <!-- Dynatrace RUM (Real User Monitoring) -->
   <!-- Replace YOUR_ENVIRONMENT_ID and YOUR_APPLICATION_ID with actual values -->
